<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChiTietSanPham">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarchitietsanpham"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colortoolbar"
        app:title="Chi tiết sản phẩm"
        app:titleTextColor="#ffffff"></androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageviewchitietsanpham"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/common_google_signin_btn_icon_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewtenchitietsanpham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/tensanpham"
                android:textColor="#f0000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textviewgiachitietsanpham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/giasp"
                android:textColor="#f20"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/spinner"
                android:gravity="center"
                android:textAlignment="center"></Spinner>

            <Button
                android:id="@+id/buttondatmua"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:background="@color/colornhat"
                android:text="@string/themgiohang"
                android:textColor="#fff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/chitietsp"
            android:textColor="#f0000000"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textviewmotachitietsanpham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/ct"
                android:textSize="20sp" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>