<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colortoolbar"
    android:orientation="vertical"
    tools:context="edu.fpt.lenovo.shoponline.activity.ThongtinkhachhangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/boder"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/ttkhachhang"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edttenKH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Tên khách hàng"
                android:inputType="text"
                android:textColorHint="@color/colornhat" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtSDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Sô điện thoại"
                android:inputType="number"
                android:textColorHint="@color/colornhat" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Email khách hàng"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colornhat" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtdc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="Địa chỉ khách hàng"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colornhat" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btXN"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@color/colornhat"
                android:padding="10dp"
                android:text="@string/btxacnhan"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btTV"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colornhat"
                android:padding="10dp"
                android:text="@string/btback"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
